--- a/index.html
+++ b/index.html
@@ -210,16 +210,9 @@
                 </div>
                 <div class="col-right">
                     <h1 class="section-title">About <span>me</span></h1>
-                    <h2>Front End Web Developer</h2>
+                    <h2>Front End Developer</h2>
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Velit ipsa repellen dus ea aliquid qui culpa
-                        assumenda ex, minima aspernatur tempore quam nemo de
-                        leniti reprehenderit natus, illum rerum iusto voluptate
-                        officia quae doloribus neq ue delectus consequatur.
-                        Quibusdam, consectetur odio corrupti minus optio soluta
-                        quam. Porro culpa voluptatem eaque delectus molestias
-                        quos fuga a,
+                        Hello my name is Elmurod. I am a FrontEnd Developer. I am 22 years old. I am from Uzbekistan and now i live here. I have a University degree. I entered the university in 2019 which is Urganch branch of Tashkent University of Information Technologies and graduated this university in 2022.
                     </p>
                     <a href="#" class="cta">Download resume</a>
                 </div>
@@ -242,7 +235,7 @@
                         <div class="contact-info">
                             <h1>Phone</h1>
                             <h2>+99 893 283 33 93</h2>
-                            <h2>+99 897 223 20 01</h2>
+                            <h2>+99 890 090 88 90</h2>
                         </div>
                     </div>
 
@@ -287,7 +280,7 @@
                     </div>
 
                     <div class="social-item">
-                        <a href="#"
+                        <a href="https://www.instagram.com/elmurod_812/"
                             ><img src="img/instagram.png" alt="icon"
                         /></a>
                     </div>
